# otodom_AJAX_scraper

./: .gitignore  main.py  pyproject.toml  readme.md  requirements.txt
config/: config_handler.py  parameters.yaml
data_types/: estate.py  estate_details.py
scraper/: otodom_scraper.py
tests/: test_config.py  test_estate.py  test_estate_details.py  test_scraper.py
